--- a/CG2_DirectX.vcxproj
+++ b/CG2_DirectX.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{3db81133-07df-400e-9950-9d6e5c278aa6}</ProjectGuid>
     <RootNamespace>CG2DirectX</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>DirectX</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
