--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -68,9 +68,6 @@
     <Filter Include="Engine\TextureManager\TextureReference">
       <UniqueIdentifier>{ea3d1cd7-23b3-47bd-9530-f75ca332881e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Project\GameObject">
-      <UniqueIdentifier>{bb9fd882-5b93-4399-b45b-cc5e3154d239}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -167,10 +164,10 @@
       <Filter>Engine</Filter>
     </ClCompile>
     <ClCompile Include="Project\GameObject\Player.cpp">
-      <Filter>Project\GameObject</Filter>
+      <Filter>Engine</Filter>
     </ClCompile>
     <ClCompile Include="Project\GameObject\PlayerBullet.cpp">
-      <Filter>Project\GameObject</Filter>
+      <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -279,12 +276,8 @@
     <ClInclude Include="Project\Scene\IScene\IScene.h" />
     <ClInclude Include="Project\GameManager\GameManager.h" />
     <ClInclude Include="Engine\Audio\Audio.h" />
-    <ClInclude Include="Project\GameObject\Player.h">
-      <Filter>Project\GameObject</Filter>
-    </ClInclude>
-    <ClInclude Include="Project\GameObject\PlayerBullet.h">
-      <Filter>Project\GameObject</Filter>
-    </ClInclude>
+    <ClInclude Include="Project\GameObject\Player.h" />
+    <ClInclude Include="Project\GameObject\PlayerBullet.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Engine\ShaderFile\Object3d.PS.hlsl">
